[gd_scene load_steps=6 format=3 uid="uid://divo8gkmvrrol"]

[ext_resource type="Script" path="res://src/ui/layouts/scripts/layers_container.gd" id="1_xujhe"]
[ext_resource type="PackedScene" uid="uid://cxbgd6gmhxcra" path="res://src/ui/components/scenes/button_with_icon.tscn" id="2_4tc5a"]
[ext_resource type="Texture2D" uid="uid://cvea3vwxwgtht" path="res://src/ui/assets/icons/Arrow Up.png" id="3_rwmca"]
[ext_resource type="Texture2D" uid="uid://csnuaygd6x8hc" path="res://src/ui/assets/icons/Arrow Down.png" id="4_87nn2"]
[ext_resource type="Texture2D" uid="uid://dk7ae2wqsq83f" path="res://src/ui/assets/icons/Trash.png" id="5_6ar38"]

[node name="LayersContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"DockerContent"
script = ExtResource("1_xujhe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Show Raw"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="BringBackward" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("2_4tc5a")]
layout_mode = 2
image = ExtResource("3_rwmca")

[node name="BringForward" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("2_4tc5a")]
layout_mode = 2
image = ExtResource("4_87nn2")

[node name="Delete" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_4tc5a")]
layout_mode = 2
size_flags_horizontal = 10
image = ExtResource("5_6ar38")

[connection signal="toggled" from="VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/BringBackward" to="." method="_on_bring_backward_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/BringForward" to="." method="_on_bring_forward_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
